Bug fix for default sizing alignment

--- a/src/components/EnvironmentSaving/EnvironmentSaving.scss
+++ b/src/components/EnvironmentSaving/EnvironmentSaving.scss
@@ -16,7 +16,7 @@ sup {
   height: 38px;
 }
 .envSavingImage {
-  height: 100%;
+  height: 64px;
 }
 .envSavingNumber {
   margin-top: 15px;
